--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -12,9 +12,9 @@ import Layout from "@layouts/Layout.astro";
 <div class="content">
    <div style="margin:0 auto 0 auto;"> <h1 style="margin:0 auto 0 auto;"><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
     <img class="img" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
-<p><a>Price List</a></p>
 <p><a>Household Appliance Repair</a></p>
-<p><a></a>Commercial Household Repair </a></p>    
+<p><a>Commercial Household Repair </a></p>
+<p><a>FAQ's</a></p>    
 </div>
     <p>We are an appliance repair company in Pasadena and South Pasadena providing same-day expert appliance repair with a quick response time to Pasadena residents. Professionally trained and attentive to details, our technicians in Pasadena quickly manage repairs for a variety of appliance types. We can professionally and quickly fix your refrigerator, washer, dryer, oven, range, dishwasher, freezer, range hood, ice maker, microwave, fireplace, washing machine, cooktop, BBQ grill, laundry speed queen, wine cellar, wine cooler, and trash compactor. We are a Pasadena appliance repair company that can fix it all.</p>
 <h2>Schedule a Repair Appointment today in Pasadena, CA</h2><ul><li>
@@ -57,24 +57,28 @@ import Layout from "@layouts/Layout.astro";
             <p>At reliable Appliance Repair Pasadena, we understand that each appliance is unique. That’s why our services cover a wide range of top brand appliances under one roof. Our highly trained technicians have the expertise to handle various brands and models such as Kitchen Aid and General Electric, and many more making sure all your repair needs are met.</p>
             <p>Our team can efficiently fix any type of appliance from Frigidaire dishwashers to Kenmore refrigerators with their extensive knowledge of handling different brands. Trust us for high-quality repairs on any kind of appliance you own - because at Reliable Appliance Repair Pasadena, no brand or model is out of our reach.</p>
             <h2>Essential Appliance Maintenance Tips</h2>
-            <img class="img" src="/images/Essential Appliance-Maintenance-Tips-at-home.webp" width="600" height="600" alt="Maintenance tips for household appliances">
+            <img class="img" src="/images/Essential Appliance-Maintenance-Tips-at-home.webp" width="600" height="264" alt="Maintenance tips for household appliances">
                 <p>Properly maintaining your appliances is crucial for their performance and overall durability. Consistent upkeep such as cleaning, debris removal, and damage inspection can significantly improve the effectiveness and lifespan of your appliances. To ensure their reliability and longevity, it is recommended to have them professionally serviced annually especially when it comes to dryers. Dryers have a tendency to accumulate dust that prevents moving components from functioning properly. It is important to have your dryer cleaned professionally one a year and twice a year if you have pets.</p>
                 <p>There are various methods that can be implemented to optimize the functioning of your household appliances.</p>
-                <ul><li><p>Insuring proper unit installation according to the manual</p></li><li>
-                    <p>Removing dust from refrigerator coils promptly</p></li><li><p>Adjusting oven temperature settings according to the manual</p></li><li>
-                        <p>Regularly cleaning filters in your units</p></li><li>
-                            <p>Not overloading washers and dryers</p></li><li><p>Using appliance with care, not slamming doors or pushing buttons hard.</p></li><li><p>Moving the unit carefully if needed without damaging outer parts such as pipes</p></li><li><p>In case of detecting strange issues don't delay the repair because it can cause further costly damage</p></li><li><p>Use services only from trusted and licensed companies.</p></li></ul>
+                <p>&bull; Insuring proper unit installation according to the manual</p>
+                    <p>&bull; Removing dust from refrigerator coils promptly</p><p>&bull; Adjusting oven temperature settings according to the manual</p>
+                        <p>&bull; Regularly cleaning filters in your units</p>
+                            <p>&bull; Not overloading washers and dryers</p>
+                            <p>&bull; Using appliance with care, not slamming doors or pushing buttons hard.</p>
+                            <p>&bull; Moving the unit carefully if needed without damaging outer parts such as pipes</p>
+                            <p>&bull; In case of detecting strange issues don't delay the repair because it can cause further costly damage</p>
+                            <p>&bull; Use services only from trusted and licensed companies.</p>
                 <p>By implementing these measures consistently, you can avoid costly repairs in the future while keeping all essential information intact regarding appliance care.</p>
                 <h2>Your Local Pasadena Appliance Repair Experts</h2>
                 <img class="img" src="/images/local-appliance-repair-experts.webp" width="600" height="600"  alt="Local appliance repair experts serving Pasadena area">
                     <p>Selecting local appliance repair services has its advantages. As your trusted experts in Pasadena, we offer:</p><ul><li>
-                        <p>Quick response times</p></li><li>
-                            <p>Skilled and licensed technicians with easy access to necessary parts</p></li><li>
-                                <p>Competent and experienced professionals who can safely fix your appliances.</p></li></ul>
+                        <p>&bull; Quick response times</p></li><li>
+                            <p>&bull; Skilled and licensed technicians with easy access to necessary parts</p></li><li>
+                                <p>&bull; Competent and experienced professionals who can safely fix your appliances.</p></li></ul>
                     <p>Choosing same-day appliance repair service in Pasadena offers:</p><ul><li>
-                        <p>Prompt and convenient appointments often available on the same or next day.</p></li><li>
-                            <p>In-depth understanding of common issues with local appliances, leading to specialized and efficient repairs.</p></li><li>
-                                <p>Maximized longevity for your appliances resulting in long-term cost savings.</p></li></ul>
+                        <p>&bull; Prompt and convenient appointments often available on the same or next day.</p></li><li>
+                            <p>&bull; In-depth understanding of common issues with local appliances, leading to specialized and efficient repairs.</p></li><li>
+                                <p>&bull; Maximized longevity for your appliances resulting in long-term cost savings.</p></li></ul>
                     <p>By opting for our services, you can reap these benefits and save time and money.</p><h2>Fast and Affordable Washer and Dryer Solutions in Pasadena, CA</h2>
                     <p>In the event that your important household appliances, such as your washer or dryer, stop working properly, what can you do? At Reliable Appliance Repair Pasadena, we offer cost-effective and efficient solutions for any issues with your washer or dryer. Our skilled technicians are well-equipped to handle a variety of problems ranging from water supply shortages in washing machines to common malfunctions like door switch failures, timer issues and control board breakdowns in dryers.</p>
                     <p>Every dryer we fix comes with free and professional dust cleaning service. It is crucial to professionally clean your dryer once a year and twice a year if you have pets. If your dryer hav't been cleaned for over a year, it presents a fire hazard and health hazard. A "dust blanket" is formed on the inside of the dryer, around moving components and near the flame. This can result in moving components breaking down causing you having to repair the dryer in the best scenario and in a house fire in the worst. Lint can also escape the dryer polluting your indoor air.</p>
