--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -271,7 +271,10 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
  /*centered images with a border*/
 .img{
   border-radius:15px;
-  margin:0 auto 0 auto;}
+  margin:15px auto 15px auto;}
+  p{margin:10px;}
+  h2{margin-top:25px}
+  h3{margin-top:25px;}
     </style>
   </body>
 </html>
