--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -11,13 +11,10 @@ import Layout from "@layouts/Layout.astro";
         
 <div class="content">
    <div style="margin:0 auto 0 auto;"> <h1 style="margin:0 auto 0 auto;"><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
-    <img class="img" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
-<p><a>Household Appliance Repair</a></p>
-<p><a>Commercial Household Repair </a></p>
-<p><a>FAQ's</a></p>    
+    <img class="img" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">  
 </div>
     <p>We are an appliance repair company in Pasadena and South Pasadena providing same-day expert appliance repair with a quick response time to Pasadena residents. Professionally trained and attentive to details, our technicians in Pasadena quickly manage repairs for a variety of appliance types. We can professionally and quickly fix your refrigerator, washer, dryer, oven, range, dishwasher, freezer, range hood, ice maker, microwave, fireplace, washing machine, cooktop, BBQ grill, laundry speed queen, wine cellar, wine cooler, and trash compactor. We are a Pasadena appliance repair company that can fix it all.</p>
-<h2>Schedule a Repair Appointment today in Pasadena, CA</h2><ul><li>
+<h2>Schedule a Repair Appointment Today in Pasadena, CA</h2><ul><li>
     <p>Same-day Pasadena appliance repair service offers prompt, professional, and transparent repair solutions, with a $65 standard service fee for all appliances and no hidden costs.</p></li><li>
         <p>The repair process will differ based on the type of appliance and diagnostics made by a technician. We strive to repair appliances the same day and the repair itself can take anywhere between one to four hours. For example oven repair may take an hour whereas fridge repair may take anywhere between two to four hours. We carry many parts on hand, however, if extra parts need to be ordered, it may take two to four days for the repair man to come back and fix your broken refrigerator, or washer.</p></li>
     <li><p>We employ skilled technicians who go through vigorous training to be able to tackle any issue at hand and service a multitude of major brands, using high-quality parts to ensure optimal appliance performance and longevity.</p></li>
