--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -96,7 +96,8 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
    h1{display: inline-block;
       font-size: 60px;
       line-height:66px;
-      font-weight:600;}
+      font-weight:600;
+      margin:0 auto 0 auto;}
     .animate-charcter
 {
    text-transform: uppercase;
