--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -10,9 +10,9 @@ import Layout from "@layouts/Layout.astro";
       <Container>
         
 <div class="content">
-   <div style="margin:0 auto 0 auto;"> <h1 style="margin:0 auto 0 auto;"><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
+   <div> <h1 style="margin:0 auto 0 auto;"><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
     <img class="img" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">  
-</div>
+    <p style="0 auto 0 auto"><a class="household-appliance-repair"> Household Appliance Repair </a>|<a> Commercial Appliance Repair </a>|<a>FAQs</a></p>
     <p>We are an appliance repair company in Pasadena and South Pasadena providing same-day expert appliance repair with a quick response time to Pasadena residents. Professionally trained and attentive to details, our technicians in Pasadena quickly manage repairs for a variety of appliance types. We can professionally and quickly fix your refrigerator, washer, dryer, oven, range, dishwasher, freezer, range hood, ice maker, microwave, fireplace, washing machine, cooktop, BBQ grill, laundry speed queen, wine cellar, wine cooler, and trash compactor. We are a Pasadena appliance repair company that can fix it all.</p>
 <h2>Schedule a Repair Appointment Today in Pasadena, CA</h2><ul><li>
     <p>Same-day Pasadena appliance repair service offers prompt, professional, and transparent repair solutions, with a $65 standard service fee for all appliances and no hidden costs.</p></li><li>
@@ -39,7 +39,7 @@ import Layout from "@layouts/Layout.astro";
         <h2>The Importance of Professional Appliance Repairs</h2>
         <img class="img" src="/images/professional-appliane-reapair.webp" width="600" height="600" alt="Professional technician repairing a refrigerator in a home kitchen"><p>While fixing your own appliances may seem cost-effective, there are numerous advantages to hiring a professional appliance repair service. Professional technicians possess the necessary tools and expertise to accurately identify and resolve issues, and also offer warranties for their workmanship and parts, providing assurance of quality.</p>
             <p>Regular maintenance by experienced professionals can significantly extend the lifespan of your appliances. This proactive approach can prevent small problems from turning into larger ones that are more expensive to fix. Using professional services for appliance repairs can help reduce energy usage by addressing any issues that lead to higher consumption levels. Ultimately resulting in improved performance and operational efficiency for your appliances.</p>
-            <h3>Household Appliance Repair Pasadena, CA</h3>
+            <h3 id="household-appliance-repair">Household Appliance Repair Pasadena, CA</h3>
             <p>In Pasadena, we offer a wide range of household appliance repair services that cater to the unique needs of every home. Our skilled technicians are equipped to handle all types and brands of appliances, including washer repairs. These include dryers, refrigerators, dishwashers and more.</p>
             <p>Our main goal is to provide high-quality and cost-effective solutions for your appliance repair needs in Pasadena with our standard service fee being $65 only. We believe in transparent pricing without any hidden charges or additional costs involved. Our aim is to ensure quick turnaround time by completing most repairs within an hour so as not disrupt your daily routine.</p>
             <p>We understand how important it is for homeowners like you to have functional appliances at all times. Hence why we strive hard towards providing comprehensive repair services for different models from various trusted brands, ensuring customer satisfaction.</p>
