--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -276,6 +276,8 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
   p{margin:10px;}
   h2{margin-top:25px}
   h3{margin-top:25px;}
+  .anchor{color:#124ded; font-size:20px;}
+    .anchor:hover{text-decoration: underline;}
     </style>
   </body>
 </html>
