--- a/src/components/contactbtn.astro
+++ b/src/components/contactbtn.astro
@@ -1,6 +1,7 @@
 ---
 import Link from "./ui/link.astro";
 ---
-
-<a style="width:120px" title="Same day wine cooler repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">BOOK US </a>
-<a style="width:120px" title="Same day wine cooler repair Los Angeles" href="/book" class="rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200 w-full px-4 py-2 bg-black text-white hover:bg-gray-800  border-2 border-transparent">Call US:(323)540-5890</a>
+<div style="margin: 0 auto 0 auto; width:325px;">
+<a style="width:95px; background-color:#000000; color:#ffffff; margin:0 5px 0 0; padding:10px; border-radius: 5px; display:inline-block;" title="Book an appointment with the Same Day Appliance Repair" href="/book">BOOK US </a>
+<a style="width:210px; background-color:#000000; color:#ffffff; padding:10px; border-radius: 5px; display:inline-block;" title="" href="tel:+1323540-5890">Call US: (323)540-5890</a>
+</div>
