--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -9,10 +9,10 @@ import Layout from "@layouts/Layout.astro";
 
 
 ---
-<Layout title="">
+<Layout title="Appliance Repair Pasadena">
 <Container>
 <div class="content">
-<div class="top"> <h1 style="margin:0 auto 0 auto;"><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
+<div class="top"> <h1><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
 <img class="img" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
 <Contactbtn />
 <br><p style="0 auto 0 auto"><a class="anchor" href="#household-appliance-repair"> <b>Household Appliance Repair</b> </a>|<a class="anchor" href="#commercial-appliance-repair"> <b>Commercial Appliance Repair</b> </a>|<a class="anchor" href="#heating"><b> Heating Ventilation And Air-Conditioning </b></a>|<a class="anchor" href="#faq"><b> FAQs</b></a></p>
