--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -6,8 +6,7 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
-
-
+description: "Appliance Repair in Pasadena - same day expert service. Call or Book online"
 ---
 <Layout title="Appliance Repair Pasadena">
 <Container>
