--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,11 +29,12 @@ const makeTitle = title
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
-<meta name="description" content="{description}">
+
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
     <SEO
       title={makeTitle}
-
+      
+      description="Same Day APlliance Repair Services. Call Us Today: (323)540-5890"
       canonical={canonicalURL}
       twitter={{
         creator: "@surjithctly",
