--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -7,7 +7,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 ---
-<Layout title="Appliance Repair Pasadena" >
+<Layout title="Appliance Repair Pasadena" description="Appliance Repair in Pasadena - same day expert service. Call or book online!">
 <Container>
 <div class="content">
 <div class="top"> <h1><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
