--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -6,8 +6,9 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+descriptio: "Appliance Repair in Pasadena"
 ---
-<Layout title="Appliance Repair Pasadena" description="Appliance Repair in Pasadena - same day expert service. Call or book online!">
+<Layout title="Appliance Repair Pasadena">
 <Container>
 <div class="content">
 <div class="top"> <h1><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
