--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -112,7 +112,7 @@ descriptio: "Appliance Repair in Pasadena"
 
 <p>Our main goal is to provide high-quality and cost-effective solutions for your appliance repair needs in Pasadena with our standard service fee being $65 only. We believe in transparent pricing without any hidden charges or additional costs involved. Our aim is to ensure quick turnaround time by completing most repairs within an hour so as not disrupt your daily routine.</p>
 <p>We understand how important it is for homeowners like you to have functional appliances at all times. Hence why we strive hard towards providing comprehensive repair services for different models from various trusted brands, ensuring customer satisfaction.</p>
-<h3 id="commercial-appliance-repair">Commercial Appliance Repair Pasadena, CA For Businesses</h3><a href="#top"><img loading="lazy" alt="go back to the top of the page" width="50" height="50" src="/images/back_to_top.png"></a>
+<h3 id="commercial-appliance-repair">Commercial Appliance Repair Pasadena, CA For Businesses</h3><a href="#top"><img loading="lazy" alt="Go back to the top of the page" width="50" height="50" src="/images/back_to_top.png"></a>
 <p>Efficient functioning of commercial appliances is crucial for smooth business operations. Despite their high quality and reliability, commercial appliances can break costing businesses money. Our Pasadena-based appliance repair services cater specifically to the needs of local businesses. From refrigeration repair to dishwashers and stoves, our company strives to provide services the same day.</p>
 <div class="category-items d-flex justify-content-between">
 <span style="padding:0 20px 0 0;">
