--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -272,11 +272,11 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
  /*centered images with a border*/
 .img{
   border-radius:15px;
-  margin:15px auto 15px auto;}
+  margin:15px 10px 20px auto;}
   p{margin:10px;}
   h2{margin-top:25px}
   h3{margin-top:25px;}
-  .anchor{color:#124ded; font-size:20px;}
+  .anchor{color:#124ded; font-size:17px;}
     .anchor:hover{text-decoration: underline;}
     </style>
   </body>
