--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -5,16 +5,21 @@ import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
+import Contactbtn from "@components/contactbtn.astro";
 ---
- <Layout title="">
+ <Layout title="Appliance Repair Los ANgeles">
       <Container>
 <div class="content">
-      <h1>Appliance Repair Services Los Angeles</h1>
+     <h1>Appliance Repair Los Angeles</h1>
 
-      <img src="/images/same-day-appliance-repair-Los-Angeles.webp" width="600" height="232" alt="Expert appliance repair Los Angeles"> <div> 
+     <div style="display: inline-grid;"><div style="grid-column: 1"><img class="img" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
+      <Contactbtn />
+      <p style="0 auto 0 auto"><a class="anchor" href="#household-appliance-repair"> Household Appliance Repair </a>|<a class="anchor" href="#commercial-appliance-repair"> Commercial Appliance Repair </a>|<a class="anchor" href="#heating"> Heating Ventilation And Air-Conditioning </a>|<a class="anchor" href="#faq"> FAQs</a></p>     
+</div>
       
-      <p>Our team provides top-notch appliance repair services throughout Los Angeles and the surrounding areas, offering same-day responses to ensure your appliances are back in working order promptly. Our Los Angeles-based technicians are thoroughly trained and detail-oriented, efficiently handling repairs across a wide range of appliances with the usage of the right equipment. Whether you need repairs for your fridge, washing machine, dryer, oven, dishwasher, freezer, microwave, or even your wine cooler, our experts have the skills to get the job done quickly and professionally. Our appliance repair company provides professional appliance repair services that you can trust.</p>
+     <div style="grid-column: 2"> <p>Our team provides top-notch appliance repair services throughout Los Angeles and the surrounding areas, offering same-day responses to ensure your appliances are back in working order promptly. Our Los Angeles-based technicians are thoroughly trained and detail-oriented, efficiently handling repairs across a wide range of appliances with the usage of the right equipment. Whether you need repairs for your fridge, washing machine, dryer, oven, dishwasher, freezer, microwave, or even your wine cooler, our experts have the skills to get the job done quickly and professionally. Our appliance repair company provides professional appliance repair services that you can trust.</p>
       
+</div></div>
       <h2>Book Your Repair Appointment in Los Angeles Today</h2>
       
       <p>Our appliance repair service in Los Angeles promises fast, professional, and transparent solutions, charging a flat $65 service fee for any diagnostic. After the diagnostic is done, the customer is provided with the exact cost of the repair. If the customer agrees to the repair, the $65 service fee is waived and he or she only pays for the repair itself. </p>
