--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -272,12 +272,21 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
  /*centered images with a border*/
 .img{
   border-radius:15px;
-  margin:15px 10px 20px auto;}
+  margin:15px 20px 20px 0;}
   p{margin:10px;}
   h2{margin-top:25px}
   h3{margin-top:25px;}
   .anchor{color:#124ded; font-size:17px;}
     .anchor:hover{text-decoration: underline;}
+   /*header for pages*/
+
+@media (min-width: 950px){
+  .two-col-grid {display:inline-grid }
+.col-one {grid-column: 1}
+.col-two{grid-column:2}
+}
+  
+
     </style>
   </body>
 </html>
