--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -270,9 +270,12 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
   }}
   .items-start{border:1px solid; border-radius: 18px; padding:10px; }
  /*centered images with a border*/
-.img{
+.img-header{
   border-radius:15px;
   margin:15px 20px 20px 0;}
+  .img{
+  border-radius:15px;
+  margin: 15px auto 15px auto;}
   p{margin:10px;}
   h2{margin-top:25px}
   h3{margin-top:25px;}
