--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -12,7 +12,7 @@ descriptio: "Appliance Repair in Pasadena"
 <Container>
 <div class="content">
 <div class="top"> <h1><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
-<img class="img" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
+<img class="img-header" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
 <Contactbtn />
 <br><p style="0 auto 0 auto"><a class="anchor" href="#household-appliance-repair"> <b>Household Appliance Repair</b> </a>|<a class="anchor" href="#commercial-appliance-repair"> <b>Commercial Appliance Repair</b> </a>|<a class="anchor" href="#heating"><b> Heating Ventilation And Air-Conditioning </b></a>|<a class="anchor" href="#faq"><b> FAQs</b></a></p>
 <p>We are an appliance repair company in Pasadena and South Pasadena providing same-day expert appliance repair with a quick response time to Pasadena residents. Professionally trained and attentive to details, our technicians in Pasadena quickly manage repairs for a variety of appliance types. We can professionally and quickly fix your refrigerator, washer, dryer, oven, range, dishwasher, freezer, range hood, ice maker, microwave, fireplace, washing machine, cooktop, BBQ grill, laundry speed queen, wine cellar, wine cooler, and trash compactor. We are a Pasadena appliance repair company that can fix it all.</p>
