--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -11,11 +11,14 @@ descriptio: "Appliance Repair in Pasadena"
 <Layout title="Appliance Repair Pasadena">
 <Container>
 <div class="content">
-<div class="top"> <h1><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
-<img class="img-header" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
-<Contactbtn />
-<br><p style="0 auto 0 auto"><a class="anchor" href="#household-appliance-repair"> <b>Household Appliance Repair</b> </a>|<a class="anchor" href="#commercial-appliance-repair"> <b>Commercial Appliance Repair</b> </a>|<a class="anchor" href="#heating"><b> Heating Ventilation And Air-Conditioning </b></a>|<a class="anchor" href="#faq"><b> FAQs</b></a></p>
+ <h1 class="top"><span class="animate-charcter">Appliance Repair</span> Pasadena</h1>
+    <div class="two-col-grid"><div class="col-one"><img class="img-header" src="/images/same-day-appliance-reapir-pasadena.webp" width="600" height="232" alt="Professional appliance repair technician working on a dishwasher">
+        <Contactbtn />
+    </div>
+    <div class="col-two">
+        <p><a class="anchor" href="#household-appliance-repair"> Household Appliance Repair </a>|<a class="anchor" href="#commercial-appliance-repair"> Commercial Appliance Repair </a>|<a class="anchor" href="#heating"> Heating Ventilation And Air-Conditioning </a>|<a class="anchor" href="#faq"> FAQs</a></p>        
 <p>We are an appliance repair company in Pasadena and South Pasadena providing same-day expert appliance repair with a quick response time to Pasadena residents. Professionally trained and attentive to details, our technicians in Pasadena quickly manage repairs for a variety of appliance types. We can professionally and quickly fix your refrigerator, washer, dryer, oven, range, dishwasher, freezer, range hood, ice maker, microwave, fireplace, washing machine, cooktop, BBQ grill, laundry speed queen, wine cellar, wine cooler, and trash compactor. We are a Pasadena appliance repair company that can fix it all.</p>
+</div></div>
 <h2>Schedule a Repair Appointment Today in Pasadena, CA</h2><ul><li>
 <p>Same-day Pasadena appliance repair service offers prompt, professional, and transparent repair solutions, with a $65 standard service fee for all appliances and no hidden costs.</p></li><li>
 <p>The repair process will differ based on the type of appliance and diagnostics made by a technician. We strive to repair appliances the same day and the repair itself can take anywhere between one to four hours. For example oven repair may take an hour whereas fridge repair may take anywhere between two to four hours. We carry many parts on hand, however, if extra parts need to be ordered, it may take two to four days for the repair man to come back and fix your broken refrigerator, or washer.</p></li>
