--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -13,3 +13,4 @@ import Link from "./ui/link.astro";
     <Link href="tel:+13235405890" style="inverted">Call: (323)540-5890</Link>&nbsp;&nbsp;<Link href="/book" style="inverted">Book</Link>
   </div>
 </div>
+<iframe loading="lazy" src="https://www.google.com/maps/d/embed?mid=1a84xIWSuMtSb2xq76UatMAP3GNHzqmw&ehbc=2E312F" style="border:0; width:100%; height:450px;"></iframe>
