--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -13,8 +13,9 @@ import Link from "./ui/link.astro";
     <Link href="tel:+13235405890" style="inverted">Call: (323)540-5890</Link>&nbsp;&nbsp;<Link href="/book" style="inverted">Book</Link>
   </div>
 </div>
-<iframe loading="lazy" src="https://www.google.com/maps/d/embed?mid=1a84xIWSuMtSb2xq76UatMAP3GNHzqmw&ehbc=2E312F" style="border:0; width:100%; height:450px;"></iframe>
-<h4>Same Day Appliance Repair</h4>
+<div class="two-col-grid"><div class="col-one"> <iframe loading="lazy" src="https://www.google.com/maps/d/embed?mid=1a84xIWSuMtSb2xq76UatMAP3GNHzqmw&ehbc=2E312F" style="border:0; width:600; height:500;"></iframe>
+</div>
+<div class="col-two"> <h4>Same Day Appliance Repair</h4>
 <p>435 E 30th St, Los Angeles, CA, 90011<br>
 Phone: <a src="tell:+14243250520">(424) 325-0520</a><br>
-email: info@samedayappliance.repair</p>
+email: info@samedayappliance.repair</p></div></div>
