--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -1,21 +1,23 @@
 ---
 import Link from "./ui/link.astro";
 ---
-
+<iframe loading="lazy" width="100%" height="400" src="https://www.google.com/maps/d/embed?mid=1a84xIWSuMtSb2xq76UatMAP3GNHzqmw&ehbc=2E312F" style="border:0;"></iframe>
 <div
   class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
-  <h4 class="text-white text-4xl md:text-6xl tracking-tight">
+
+<div class="two-col-grid"><div class="col-one">
+  <h3 style="color:#ffffff;">
     Don't Wait! Contact Us Today.
-  </h4>
+  </h3>
   <p class="text-slate-400 mt-4 text-lg md:text-xl">  
   </p>
   <div class="flex mt-5">
     <Link href="tel:+13235405890" style="inverted">Call: (323)540-5890</Link>&nbsp;&nbsp;<Link href="/book" style="inverted">Book</Link>
   </div>
 </div>
-<div class="two-col-grid"><div class="col-one"> <iframe loading="lazy" src="https://www.google.com/maps/d/embed?mid=1a84xIWSuMtSb2xq76UatMAP3GNHzqmw&ehbc=2E312F" style="border:0; width:600; height:500;"></iframe>
-</div>
-<div class="col-two"> <h4>Same Day Appliance Repair</h4>
-<p>435 E 30th St, Los Angeles, CA, 90011<br>
-Phone: <a src="tell:+14243250520">(424) 325-0520</a><br>
+<div class="col-two">
+<p style="color:#ffffff;">
+  <b>Same Day Appliance Repair</b></br>
+    435 E 30th St, Los Angeles, CA, 90011<br>
+Phone: <a style="color:#ffffff;" src="tell:+14243250520">(424) 325-0520</a><br>
 email: info@samedayappliance.repair</p></div></div>
