--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -288,6 +288,7 @@ a{color:#0d0b29;text-decoration:none}.d-flex{display:flex}.align-items-center{al
 .col-one {grid-column: 1}
 .col-two{grid-column:2}
 }
+.col-one{margin:0 20px 15px 0;}
   
 
     </style>
