--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -6,9 +6,9 @@ import Link from "./ui/link.astro";
   class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
 
 <div class="two-col-grid"><div class="col-one">
-  <h3 style="color:#ffffff;">
+  <h4 style="color:#ffffff; font-size:20px;">
     Don't Wait! Contact Us Today.
-  </h3>
+  </h4>
   <p class="text-slate-400 mt-4 text-lg md:text-xl">  
   </p>
   <div class="flex mt-5">
@@ -16,8 +16,8 @@ import Link from "./ui/link.astro";
   </div>
 </div>
 <div class="col-two">
-<p style="color:#ffffff;">
-  <b>Same Day Appliance Repair</b></br>
-    435 E 30th St, Los Angeles, CA, 90011<br>
+<h3 style="color:#ffffff; margin-top:0; padding-top:0;">
+  Same Day Appliance Repair</h3>
+   <p style="color:#ffffff;">435 E 30th St, Los Angeles, CA, 90011<br>
 Phone: <a style="color:#ffffff;" src="tell:+14243250520">(424) 325-0520</a><br>
 email: info@samedayappliance.repair</p></div></div>
