--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -12,7 +12,7 @@ import Link from "./ui/link.astro";
   <p class="text-slate-400 mt-4 text-lg md:text-xl">  
   </p>
   <div class="flex mt-5">
-    <Link href="tel:+13235405890" style="inverted">Call: (323)540-5890</Link>&nbsp;&nbsp;<Link href="/book" style="inverted">Book</Link>
+    <Link href="tel:14243250520" style="inverted">Call: (424) 325-0520</Link>&nbsp;&nbsp;<Link href="/book" style="inverted">Book</Link>
   </div>
 </div>
 <div class="col-two">
