--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -1,5 +1,6 @@
 ---
 import Link from "./ui/link.astro";
+import { Icon } from "astro-icon";
 ---
 <iframe loading="lazy" width="100%" height="400" title="Same Day APpliance Repair - areas we serve"src="https://www.google.com/maps/d/embed?mid=1a84xIWSuMtSb2xq76UatMAP3GNHzqmw&ehbc=2E312F" style="border:0;"></iframe>
 <div
@@ -18,6 +19,6 @@ import Link from "./ui/link.astro";
 <div class="col-two">
 <h3 style="color:#ffffff; margin-top:0; padding-top:0;">
   Same Day Appliance Repair</h3>
-   <p style="color:#ffffff;">435 E 30th St, Los Angeles, CA, 90011<br>
-Phone: <a style="color:#ffffff;" src="tell:+14243250520">(424) 325-0520</a><br>
-email: info@samedayappliance.repair</p></div></div>
+   <p style="color:#ffffff;"><Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />435 E 30th St, Los Angeles, CA, 90011<br>
+    <Icon class="text-gray-400 w-4 h-4" name="uil:phone" />Phone: <a style="color:#ffffff;" src="tell:+14243250520">(424) 325-0520</a><br>
+<Icon class="text-gray-400 w-4 h-4" name="uil:envelope" />email: info@samedayappliance.repair</p></div></div>
