--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -22,7 +22,7 @@ import { Icon } from "astro-icon";
         <div class="mt-5">
           <div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
+            <span>435 E 30th St, Los Angeles, CA, 90011</span>
           </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
               href="mailto:hello@astroshipstarter.com"
@@ -30,7 +30,7 @@ import { Icon } from "astro-icon";
             >
           </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
             <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (323) 540-5890</a
+              href="tel:+14243250520">+1 (424) 325-0520</a
             >
           </div>
         </div>
