--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,13 @@ const makeTitle = title
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
     <!-- <link rel="preload" as="image" href={src} alt="Hero" /> -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F5MBY27XES"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-F5MBY27XES');
+      </script>
     <SEO
       title={makeTitle}
       
